# ivory

./: .gitignore  .gitmodules  .travis.yml  CODE_OF_CONDUCT.md  Makefile  Makefile.sandbox  README.md  hackage.sh  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.2.yaml  stack-8.0.yaml  stack-8.2.2.yaml  stack-8.2.yaml  stack-8.4.3.yaml  stack-8.6.4.yaml  stack-8.8.1.yaml  stack-8.8.2.yaml  stack.mk  stack.yaml
icfp-15/: Makefile  intro.tex  ivory-embedding.tex  ivory.tex  related-work.tex  semantics.tex  sigplanconf.cls  tools.tex
ivory/: .gitignore  csyntax.tmp  default.nix  ivory.cabal  user-guide.md
ivory-artifact/: LICENSE  Makefile  ivory-artifact.cabal
ivory-artifact/src/Ivory/: Artifact.hs
ivory-artifact/src/Ivory/Artifact/: Location.hs  Template.hs  Transformer.hs
ivory-backend-aadl/: ivory-backend-aadl.cabal
ivory-backend-aadl/src/Ivory/Compile/: AADL.hs
ivory-backend-aadl/src/Ivory/Compile/AADL/: AST.hs  Gen.hs  Identifier.hs  Modules.hs  Monad.hs  PrettyPrint.hs  Types.hs
ivory-backend-c/: Makefile  Makefile.deps  TODO.md  default.nix  ivory-backend-c.cabal
ivory-backend-c/example/: fib.hs
ivory-backend-c/examples/: .gitignore  Area.hs  ConstRef.hs  Factorial.hs  Forever.hs  FunPtr.hs  PublicPrivate.hs  String.hs
ivory-backend-c/ic/: Main.hs
ivory-backend-c/runtime/: ivory.h  ivory_asserts.h  ivory_templates.h  test.c
ivory-backend-c/src/Ivory/Compile/: C.hs
ivory-backend-c/src/Ivory/Compile/C/: CmdlineFrontend.hs  Gen.hs  Modules.hs  Prop.hs  SourceDeps.hs  Types.hs
ivory-backend-c/src/Ivory/Compile/C/CmdlineFrontend/: Options.hs
ivory-bitdata/: LICENSE  ivory-bitdata.cabal
ivory-bitdata/docs/: ivory-bitdata.md
ivory-bitdata/examples/: Example.hs  ExampleTypes.hs  Main.hs
ivory-bitdata/src/Ivory/: BitData.hs
ivory-bitdata/src/Ivory/BitData/: AST.hs  Array.hs  BitData.hs  Bits.hs  DefBitRep.hs  Monad.hs  Parser.hs  Quote.hs  TokenParser.hs
ivory-eval/: LICENSE  Makefile  ivory-eval.cabal
ivory-eval/src/Ivory/: Eval.hs
ivory-eval/test/: Test.hs
ivory-examples/: Makefile  Makefile.deps  ivory-examples.cabal
ivory-examples/data/: foo.h  some_header.h  some_other_header.h
ivory-examples/examples/: AddrOfRegression.hs  Alloc.hs  Area.hs  Array.hs  BitData.hs  BitDataTypes.hs  Bits.hs  ClassHierarchy.hs  Concrete.hs  ConcreteFile.hs  Cond.hs  ConstPtrRef.hs  ConstRef.hs  Coroutine.hs  DynArray.hs  Extern.hs  Factorial.hs  FibLoop.hs  FibTutorial.hs  Float.hs  Forever.hs  FunPtr.hs  Loop.hs  Makefile  Overflow.hs  PID.hs  PublicPrivate.hs  QC.hs  SizeOf.hs  String.hs  Test.hs  TestClang.hs  TestExamples.hs  file.ivory
ivory-formal-model/: EvalSafe.thy  Heaps.thy  LICENSE  Lib.thy  Preservation.thy  Progress.thy  README.md  ROOT  Semantics.thy  Soundness.thy  Syntax.thy  TypeSystem.thy  TypeSystemProps.thy  make-doc.sh
ivory-formal-model/document/: root.tex
ivory-hw/: Main.hs  Makefile  Makefile.deps  ivory-hw.cabal
ivory-hw/examples/: Example.hs  ExampleTypes.hs
ivory-hw/src/Ivory/: HW.hs
ivory-hw/src/Ivory/HW/: BitData.hs  IOArea.hs  Machine.hs  Module.hs  Prim.hs  Reg.hs  STM32F4.hs  SearchDir.hs
ivory-hw/support/: ivory_hw_prim.h
ivory-model-check/: .ghci  .gitignore  Makefile  Makefile.deps  README.md  default.nix  ivory-model-check.cabal  ivory-model-check.cabal.deprecate
ivory-model-check/src/Ivory/: ModelCheck.hs
ivory-model-check/src/Ivory/ModelCheck/: AST.hs  CVC4.hs  Ivory2CVC4.hs  Ivory2Logic.hs  Logic.hs  Logic2SimpleSMT.hs  Logic2Z3.hs  Monad.hs
ivory-model-check/test/: Examples.hs  GenCode.hs  Heartbeat.hs  PPM.hs  RingBuffer.hs  Test.hs  Tutorial.hs  examples
ivory-opts/: Bounds.hs  LICENSE  Makefile.deps  default.nix  ivory-opts.cabal
ivory-opts/src/Ivory/Opts/: AssertFold.hs  BitShift.hs  CFG.hs  CSE.hs  ConstFold.hs  ConstFoldComp.hs  DivZero.hs  FP.hs  HashCons.hs  Index.hs  Overflow.hs  PreProc.hs  SanityCheck.hs  TypeCheck.hs  Utils.hs
ivory-opts/testing/: Bounds.hs
ivory-paper/: .gitignore  Makefile  appendix-rules.tex  conclusion.tex  edsl.tex  intro.tex  ivory-embedding.tex  ivory-talk.key  ivory.tex  mathpartir.sty  overview.md  overview.tex  paper.bib  related-work.tex  semantics.tex  tools.tex
ivory-quickcheck/: .gitignore  Makefile.deps  default.nix  ivory-quickcheck.cabal
ivory-quickcheck/src/Ivory/: QuickCheck.hs
ivory-quickcheck/src/Ivory/QuickCheck/: Arbitrary.hs  Monad.hs  Testable.hs
ivory-quickcheck/test/: Test.hs
ivory-serialize/: LICENSE  Makefile  Makefile.deps  ivory-serialize.cabal
ivory-serialize/src/Ivory/: Serialize.hs
ivory-serialize/src/Ivory/Serialize/: Array.hs  Atoms.hs  Class.hs  LittleEndian.hs  PackRep.hs  Safe.hs  SearchDir.hs  Struct.hs
ivory-serialize/src/Ivory/Serialize/Safe/: BigEndian.hs  LittleEndian.hs
ivory-serialize/support/: ivory_serialize_prim.h
ivory-stdlib/: Makefile  default.nix  ivory-stdlib.cabal
ivory-stdlib/src/Ivory/: Stdlib.hs
ivory-stdlib/src/Ivory/Stdlib/: Control.hs  Init.hs  Maybe.hs  Memory.hs  Operators.hs  SearchDir.hs  String.hs  Trig.hs
ivory-stdlib/support/: ivory_stdlib_string_prim.c  ivory_stdlib_string_prim.h
ivory-tutorial/: .gitignore  Example.hs  Solution.hs  codegen.hs  example.hs  simulate.hs  tutorial.md
ivory/examples/: Check.hs
ivory/src/Ivory/: Interp.hs  Language.hs
ivory/src/Ivory/Interp/: Error.hs  Eval.hs  Module.hs  Monad.hs  QuickCheck.hs  Tests.hs  Value.hs
ivory/src/Ivory/Language/: #DynArray.hs#  Area.hs  Array.hs  Assert.hs  Bits.hs  BoundedInteger.hs  CArray.hs  CSyntax.hs  Cast.hs  Comment.hs  Cond.hs  Const.hs  Coroutine.hs  DynArray.hs  Effects.hs  Float.hs  IBool.hs  IChar.hs  IIntegral.hs  IString.hs  Init.hs  Loop.hs  MemArea.hs  Module.hs  Monad.hs  Plugin.hs  Pointer.hs  Proc.hs  Proxy.hs  Ptr.hs  Ref.hs  Scope.hs  Sint.hs  SizeOf.hs  String.hs  Struct.hs  Syntax.hs  Type.hs  Uint.hs
ivory/src/Ivory/Language/BitData/: Array.hs  BitData.hs  Bits.hs  DefBitRep.hs  Monad.hs
ivory/src/Ivory/Language/CSyntax/: Lexer.x  ParseAST.hs  Parser.hs  Parser.y  QQ.hs  TokenParser.hs
ivory/src/Ivory/Language/Struct/: Parser.hs  Quote.hs
(+37 files in other folders)
