name:                ivory-artifact
version:             0.1.0.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
homepage:            http://ivorylang.org
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3
license-file:        LICENSE
source-repository    this
  type:     git
  location: https://github.com/GaloisInc/ivory

library
  exposed-modules:      Ivory.Artifact,
                        Ivory.Artifact.Template,
                        Ivory.Artifact.Transformer
  build-depends:        base >= 4.6,
                        filepath,
                        directory,
                        text,
                        utf8-string,
                        HStringTemplate
  hs-source-dirs:       src
  default-language:     Haskell2010

  ghc-options:          -Wall
