name:                ivory-backend-aadl
version:             0.1.0.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

library
  exposed-modules:      Ivory.Compile.AADL,
                        Ivory.Compile.AADL.AST,
                        Ivory.Compile.AADL.Types,
                        Ivory.Compile.AADL.Gen,
                        Ivory.Compile.AADL.Modules,
                        Ivory.Compile.AADL.PrettyPrint
  build-depends:        base >= 4.6,
                        srcloc,
                        mainland-pretty >= 0.2.5,
                        monadLib >= 3.7,
                        template-haskell >= 2.8,
                        ivory,
                        ivory-opts,
                        wl-pprint,
                        containers
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall
