name: ivory-backend-c
version: 0.1.0.1
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: leepike@galois.com
homepage: http://smaccmpilot.org/languages/ivory-introduction.html
synopsis: Ivory C backend.
description:
    Ivory compiler, to a subset of C99.
category: Language
author: Galois, Inc.
data-files:
    runtime/ivory.h
    runtime/ivory_templates.h
    runtime/ivory_asserts.h
 
source-repository this
    type: git
    location: https://github.com/GaloisInc/ivory
    tag: hackage-backend-0101
 
library
    build-depends:
        base >=4.6,
        language-c-quote >=0.7.8,
        srcloc -any,
        mainland-pretty >=0.2.5,
        monadLib >=3.7,
        template-haskell >=2.8,
        bytestring >=0.10,
        ivory -any,
        ivory-opts -any,
        directory -any,
        filepath -any,
        process -any,
        cmdlib >=0.3.5,
        containers -any
    exposed-modules:
        Ivory.Compile.C
        Ivory.Compile.C.Gen
        Ivory.Compile.C.Modules
        Ivory.Compile.C.Prop
        Ivory.Compile.C.Types
        Ivory.Compile.C.CmdlineFrontend
        Ivory.Compile.C.CmdlineFrontend.Options
        Ivory.Compile.C.SourceDeps
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Paths_ivory_backend_c
    ghc-options: -Wall
 
 