name:                ivory-eval
version:             0.1.0.0
author:              Galois, Inc.
copyright:           2013 Galois, Inc.
maintainer:          eseidel@galois.com
category:            Testing
build-type:          Simple
cabal-version:       >= 1.10
synopsis:            Simple concrete evaluator for Ivory programs
description:         Warning!  This module is experimental and its implementation may change dramatically.
homepage:            http://smaccmpilot.org/languages/ivory-introduction.html
license:             BSD3
license-file:        LICENSE
source-repository    head
  type:     git
  location: https://github.com/GaloisInc/ivory

library
  exposed-modules:      Ivory.Eval
  build-depends:        base >= 4.6,
                        monadLib,
                        ivory,
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall
