name:                ivory-eval
version:             0.1.0.0
author:              Galois, Inc.
copyright:           2014 Galois, Inc.
maintainer:          eseidel@galois.com
category:            Testing
build-type:          Simple
cabal-version:       >= 1.10
synopsis:            Simple concrete evaluator for Ivory programs
description:         Warning!  This module is experimental and its implementation may change dramatically.
homepage:            http://smaccmpilot.org/languages/ivory-introduction.html
license:             BSD3
license-file:        LICENSE
source-repository    head
  type:     git
  location: https://github.com/GaloisInc/ivory

library
  exposed-modules:      Ivory.Eval
  build-depends:        base >= 4.6,
                        containers,
                        monadLib,
                        ivory
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall

test-suite test
  hs-source-dirs:       test
  type:                 exitcode-stdio-1.0
  main-is:              Test.hs
  if impl(ghc >= 7.8)
    ghc-options:        -Wall -fhpc -fplugin=Ivory.Language.Plugin -fplugin-opt=Ivory.Language.Plugin:kill-foreign-stubs
  else
    ghc-options:        -Wall

  build-depends: base
               , containers
               , tasty >= 0.10
               , tasty-hunit
               , monadLib
               , ivory
               , ivory-eval

  default-language: Haskell2010

