name:                ivory-eval
version:             0.1.0.4
author:              Galois, Inc.
copyright:           2014 Galois, Inc.
maintainer:          leepike@galois.com
category:            Testing
build-type:          Simple
cabal-version:       >= 1.10
synopsis:            Simple concrete evaluator for Ivory programs
description:         Warning!  This module is experimental and its implementation may change dramatically.
homepage:            http://ivorylang.org
license:             BSD3
license-file:        LICENSE
source-repository    head
  type:     git
  location: https://github.com/GaloisInc/ivory
  tag:      hackage-0.1.0.4

library
  exposed-modules:      Ivory.Eval
  build-depends:        base >= 4.6 && < 5,
                        base-compat,
                        containers,
                        monadLib,
                        ivory
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall

test-suite test
  hs-source-dirs:       test
  type:                 exitcode-stdio-1.0
  main-is:              Test.hs
  ghc-options:          -Wall

  build-depends: base >= 4.7 && < 5
               , base-compat
               , containers
               , tasty >= 0.10
               , tasty-hunit
               , monadLib
               , ivory
               , ivory-eval

  default-language: Haskell2010

