name: ivory-examples
version: 0.1.0.2
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2013 Galois, Inc.
maintainer: trevor@galois.com
homepage: http://smaccmpilot.org/languages/ivory-introduction.html
synopsis: Ivory examples.
description:
    Various examples demonstrating the use of Ivory.
category: Language
author: Galois, Inc
 
source-repository this
    type: git
    location: https://github.com/GaloisInc/ivory
    tag: hackage-examples-0102
 
executable ivory-fibtutorial
    build-depends:
        base >=4.6,
        pretty >=1.1,
        monadLib >=3.7,
        template-haskell >=2.8,
        mainland-pretty >=0.2.4,
        wl-pprint -any,
        ivory -any,
        ivory-opts -any,
        ivory-backend-c -any,
        ivory-quickcheck -any,
        ivory-stdlib -any,
        QuickCheck -any
    main-is: FibTutorial.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: examples
    ghc-options: -Wall
 
executable ivory-c-clang-test
    build-depends:
        base >=4.6,
        pretty >=1.1,
        monadLib >=3.7,
        template-haskell >=2.8,
        mainland-pretty >=0.2.4,
        wl-pprint -any,
        ivory -any,
        ivory-opts -any,
        ivory-quickcheck -any,
        ivory-backend-c -any,
        ivory-stdlib -any,
        QuickCheck -any
    main-is: TestClang.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: examples
    other-modules:
        PID
        FibLoop
        Factorial
        String
        FunPtr
        Overflow
        Float
        Alloc
        Area
        Cond
        Forever
        PublicPrivate
        Bits
        SizeOf
        AddrOfRegression
        Array
        QC
        BitData
        BitDataTypes
    ghc-options: -Wall
 
 