name:                ivory-examples
version:             0.1.0.2
author:              Galois, Inc
maintainer:          trevor@galois.com
copyright:           2013 Galois, Inc.
category:            Language
synopsis:            Ivory examples.
description:         Various examples demonstrating the use of Ivory.
homepage:            http://smaccmpilot.org/languages/ivory-introduction.html
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3
license-file:        LICENSE
source-repository    this
  type:     git
  location: https://github.com/GaloisInc/ivory
  tag:      hackage-examples-0102

executable ivory-c-clang-test
  main-is:              TestExamples.hs
  other-modules:        PID,
                        FibLoop,
                        Factorial,
                        String,
                        FunPtr,
                        Overflow,
                        Float,
                        Alloc,
                        Area,
                        Cond,
                        Forever,
                        PublicPrivate,
                        Bits,
                        SizeOf,
                        AddrOfRegression,
                        Array,
                        QC,
                        BitData,
                        BitDataTypes,
                        ConcreteFile,
                        Coroutine,
                        Loop
  hs-source-dirs:       examples
  build-depends:        base >= 4.6,
                        base-compat,
                        pretty >= 1.1,
                        monadLib >= 3.7,
                        template-haskell >= 2.8,
                        ivory,
                        ivory-opts,
                        ivory-quickcheck,
                        ivory-backend-c,
                        ivory-stdlib,
                        QuickCheck
  default-language:     Haskell2010
  if impl(ghc >= 7.8)
    ghc-options:        -Wall -fhpc -fplugin=Ivory.Language.Plugin -fplugin-opt=Ivory.Language.Plugin:kill-foreign-stubs
  else
    ghc-options:        -Wall
