name:                ivory-examples
version:             0.1.0.5
author:              Galois, Inc
maintainer:          trevor@galois.com, leepike@galois.com
copyright:           2013 Galois, Inc.
category:            Language
synopsis:            Ivory examples.
description:         Various examples demonstrating the use of Ivory.
homepage:            http://ivorylang.org/
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3
license-file:        LICENSE
data-files:          examples/file.ivory
source-repository    this
  type:     git
  location: https://github.com/GaloisInc/ivory
  tag:      hackage-0.1.0.4

executable ivory-c-clang-test
  main-is:              TestExamples.hs
  other-modules:        AddrOfRegression
                      , Alloc
                      , Area
                      , Array
                      , BitData
                      , BitDataTypes
                      , Bits
                      , ClassHierarchy
                      , ConcreteFile
                      , Cond
                      , ConstPtrRef
                      , ConstRef
                      , Coroutine
                      , Extern
                      , Factorial
                      , FibLoop
                      , FibTutorial
                      , Float
                      , Forever
                      , FunPtr
                      , Loop
                      , Overflow
                      , PID
                      , PublicPrivate
                      , SizeOf
                      , String
  hs-source-dirs:       examples
  build-depends:        base >= 4.7 && < 5,
                        base-compat,
                        pretty >= 1.1,
                        monadLib >= 3.7,
                        template-haskell >= 2.8 && <2.11,
                        ivory,
                        ivory-opts,
                        ivory-backend-c,
                        ivory-stdlib,
                        QuickCheck
  default-language:     Haskell2010
  ghc-options:        -Wall
