name: ivory-model-check
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
maintainer: leepike@galois.com
category: Testing
author: Galois, Inc.
 
library
    build-depends:
        base >=4.6,
        containers -any,
        filepath -any,
        process -any,
        directory -any,
        bytestring >=0.10,
        monadLib -any,
        ivory -any,
        ivory-opts -any,
        pretty-show -any,
        ivory-backend-c -any
    exposed-modules:
        Ivory.ModelCheck
        Ivory.ModelCheck.Monad
        Ivory.ModelCheck.CVC4
        Ivory.ModelCheck.Ivory2CVC4
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall
 
 