name:                ivory-model-check
version:             0.1.0.0
author:              Galois, Inc.
maintainer:          leepike@galois.com
category:            Testing
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:      Ivory.ModelCheck
                        Ivory.ModelCheck.Monad
                        Ivory.ModelCheck.CVC4
                        Ivory.ModelCheck.Ivory2CVC4
  build-depends:        base >= 4.6,
                        containers,
                        filepath,
                        process,
                        directory,
                        bytestring >= 0.10,
                        monadLib,
                        ivory,
                        ivory-opts,
                        ivory-backend-c
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall

test-suite test
  hs-source-dirs: test, test/examples
  type:           exitcode-stdio-1.0
  main-is:        Test.hs
  if impl(ghc >= 7.8)
    ghc-options:        -Wall -fhpc -fplugin=Ivory.Language.Plugin -fplugin-opt=Ivory.Language.Plugin:kill-foreign-stubs
  else
    ghc-options:        -Wall
  build-depends:  base
               ,  tasty >= 0.10
               ,  tasty-hunit
               ,  monadLib
               ,  QuickCheck
               ,  ivory
               ,  ivory-backend-c
               ,  ivory-model-check
               ,  ivory-quickcheck
               ,  ivory-serialize
               ,  ivory-stdlib

  default-language: Haskell2010

executable c-gen
  hs-source-dirs: test
  type:           exitcode-stdio-1.0
  main-is:        GenCode.hs
  if impl(ghc >= 7.8)
    ghc-options:        -Wall -fhpc -fplugin=Ivory.Language.Plugin -fplugin-opt=Ivory.Language.Plugin:kill-foreign-stubs
  else
    ghc-options:        -Wall
  build-depends:  base
               ,  ivory
               ,  ivory-backend-c
               ,  ivory-serialize
               ,  ivory-stdlib
               ,  ivory-model-check

  default-language: Haskell2010
