name:                ivory-model-check
version:             0.1.0.3
author:              Galois, Inc.
maintainer:          leepike@galois.com
category:            Testing
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:      Ivory.ModelCheck
                        Ivory.ModelCheck.Monad
                        Ivory.ModelCheck.CVC4
                        Ivory.ModelCheck.Ivory2CVC4
  build-depends:        base >= 4.6,
                        base-compat,
                        containers,
                        filepath,
                        process,
                        directory,
                        bytestring >= 0.10,
                        monadLib,
                        ivory,
                        ivory-opts
  if impl(ghc < 8)
    build-depends:      semigroups

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall

test-suite test
  hs-source-dirs: test, test/examples
  type:           exitcode-stdio-1.0
  main-is:        Test.hs
  ghc-options:    -Wall
  build-depends:  base
               ,  base-compat
               ,  tasty >= 0.10
               ,  tasty-hunit
               ,  monadLib
               ,  QuickCheck
               ,  ivory
               ,  ivory-backend-c
               ,  ivory-model-check
               ,  ivory-serialize
               ,  ivory-stdlib

  default-language: Haskell2010

  other-modules: AddrOfRegression
                 Alloc
                 Area
                 Array
                 Bits
                 Cond
                 Examples
                 Extern
                 Factorial
                 FibLoop
                 Float
                 Heartbeat
                 Overflow
                 PID
                 PPM
                 PublicPrivate
                 RingBuffer
                 String
