name:                ivory-quickcheck
version:             0.1.0.0
author:              Galois, Inc.
copyright:           2013 Galois, Inc.
maintainer:          leepike@galois.com
category:            Testing
build-type:          Simple
cabal-version:       >= 1.10
synopsis:            QuickCheck driver for Ivory.
description:         Warning!  This module is experimental and its implementation may change dramatically.
homepage:            http://smaccmpilot.org/languages/ivory-introduction.html
license:             BSD3
license-file:        LICENSE
source-repository    this
  type:     git
  location: https://github.com/GaloisInc/ivory
  tag:      hackage-qc-0100

library
  exposed-modules:      Ivory.QuickCheck,
                        Ivory.QuickCheck.Arbitrary,
                        Ivory.QuickCheck.Monad
  build-depends:        base >= 4.6 && < 4.7,
                        monadLib,
                        random,
                        QuickCheck == 2.6,
                        ivory
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall
