name:                ivory-quickcheck
version:             0.1.0.0
author:              Galois, Inc.
maintainer:          leepike@galois.com
category:            Testing
build-type:          Simple
cabal-version:       >= 1.10

flag werror
  default:              False
  description:          Pass -Werror to GHC.

library
  exposed-modules:      Ivory.QuickCheck,
                        Ivory.QuickCheck.Arbitrary,
                        Ivory.QuickCheck.Monad
  build-depends:        base >= 4.6,
                        monadLib,
                        random,
                        QuickCheck == 2.6,
                        ivory
  hs-source-dirs:       src
  default-language:     Haskell2010
  if flag(werror)
    ghc-options:        -Wall -Werror
  else
    ghc-options:        -Wall
