name:                ivory-quickcheck
version:             0.2.0.4
author:              Galois, Inc.
copyright:           2013 Galois, Inc.
maintainer:          leepike@galois.com
category:            Testing
build-type:          Simple
cabal-version:       >= 1.10
synopsis:            QuickCheck driver for Ivory.
description:         Warning!  This module is experimental and its implementation may change dramatically.
homepage:            http://ivorylang.org
license:             BSD3
license-file:        LICENSE
source-repository    this
  type:     git
  location: https://github.com/GaloisInc/ivory
  tag:      hackage-0.1.0.4

library
  exposed-modules:      Ivory.QuickCheck
  build-depends:        base >= 4.7 && < 5,
                        base-compat,
                        monadLib,
                        random,
                        QuickCheck >= 2.7,
                        ivory,
                        ivory-backend-c,
                        ivory-eval
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall

test-suite test
  hs-source-dirs: test
  type:           exitcode-stdio-1.0
  main-is:        Test.hs
  ghc-options:    -Wall
  build-depends:  base >= 4.6 && < 5
               ,  base-compat
               ,  filepath
               ,  directory
               ,  process
               ,  tasty >= 0.10
               ,  tasty-hunit
               ,  monadLib
               ,  QuickCheck
               ,  ivory
               ,  ivory-backend-c
               ,  ivory-quickcheck
               ,  ivory-stdlib

  default-language: Haskell2010
