name:                ivory-serialize
version:             0.1
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

data-files: support/ivory_serialize_prim.h

library
  exposed-modules:      Ivory.Serialize,
                        Ivory.Serialize.LittleEndian
  other-modules:        Ivory.Serialize.Atoms,
                        Ivory.Serialize.PackRep,
                        Ivory.Serialize.Safe.LittleEndian,
                        Ivory.Serialize.Safe.BigEndian,
                        Ivory.Serialize.Struct,
                        Paths_ivory_serialize

  build-depends:        base >= 4.6,
                        filepath,
                        monadLib,
                        ivory,
                        ivory-artifact

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall
