name:                ivory-serialize
version:             0.1.0.5
synopsis:            Serialization library for Ivory.
description:         Used to automatically pack and unpack Ivory structures in big or little endian.
author:              Galois, Inc.
maintainer:          leepike@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3
license-file:        LICENSE
data-files: support/ivory_serialize_prim.h
source-repository    this
  type:     git
  location: https://github.com/GaloisInc/ivory
  tag:      hackage-0.1.0.4



library
  exposed-modules:      Ivory.Serialize,
                        Ivory.Serialize.LittleEndian
  other-modules:        Ivory.Serialize.Atoms,
                        Ivory.Serialize.PackRep,
                        Ivory.Serialize.Safe.LittleEndian,
                        Ivory.Serialize.Safe.BigEndian,
                        Ivory.Serialize.Struct,
                        Paths_ivory_serialize

  build-depends:        base >= 4.7 && < 5,
                        base-compat,
                        filepath,
                        monadLib,
                        ivory,
                        ivory-artifact

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall
  if impl(ghc == 8.0.1)
    ghc-options:        -Wno-redundant-constraints
