name:                ivory-stdlib
version:             0.1.0.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

data-files: support/ivory_stdlib_string_prim.h,
            support/ivory_stdlib_string_prim.c

flag debug-qq
  default:              False
  description:          Enable dumping of template-haskell splices


library
  exposed-modules:      Ivory.Stdlib,
                        Ivory.Stdlib.Control,
                        Ivory.Stdlib.Memory,
                        Ivory.Stdlib.Operators,
                        Ivory.Stdlib.String,
                        Ivory.Stdlib.Trig,
                        Ivory.Stdlib.SearchDir,
                        Ivory.Stdlib.Maybe

  other-modules:        Paths_ivory_stdlib

  build-depends:        base >= 4.6,
                        filepath,
                        ivory

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall
